--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 24px;
 }
